introduce legacy application to run with `runLegacy`